# mielelogic-ha

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  validate.yml
custom_components/mielelogic/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/mielelogic/translations/: en.json
mielelogic_api/: __init__.py  _api.py  _version.py  client.py  dto.py  exceptions.py  settings.py
mielelogic_cli/: __init__.py  app.py
mielelogic_ha/: __init__.py  dto.py
scripts/: develop  export_live_snapshot.py  release
tests/: conftest.py  factories.py  test_external_api_endpoint.py
tests/custom_components/mielelogic/: conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
tests/mielelogic_api/: test_client.py  test_dto.py  test_external_api_endpoint.py  test_settings.py
tests/mielelogic_cli/: test_app.py
tests/support/: __init__.py  factories.py
